[package]
name = "radix-tree"
version = "0.0.5"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "A radix tree implementation for router, path search"
repository = "https://github.com/trek-rs/radix-tree"
documentation = "https://github.com/trek-rs/radix-tree/"
readme = "README.md"
keywords = ["radix", "tree", "router", "trek"]
license = "MIT/Apache-2.0"
